test/official_tests/call/num.lox
123(); // error: {"line":1,"message":"Only classes and functions are callable","type":"RuntimeError"}
